feat: enhance notifications and reporting workflows